# leizi-shell

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  ToDoList.txt  detailed_todo_list.md  install.sh  test.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  package-release.yml
docs/: DOXYGEN.md
docs/api/: README.md
docs/user-guide/: README.md
packaging/arch/: AUR_SUBMISSION.md
packaging/debian/: changelog  control  copyright  install  rules
packaging/docker/: Dockerfile  README.md
packaging/homebrew/: leizi.rb
scripts/: benchmark.sh  valgrind-check.sh
src/: main.cpp
src/builtin/: array.cpp  builtin.h  builtin_context.h  builtin_manager.cpp  builtin_manager.h  cd.cpp  echo.cpp  export.cpp  highlight.cpp  history.cpp  info.cpp  simple.cpp
src/completion/: completer.cpp  completer.h
src/config/: config.cpp  config.h
src/core/: job_control.cpp  job_control.h  parser.cpp  parser.h
src/prompt/: git.cpp  git.h  prompt.cpp  prompt.h
src/syntax/: highlighter.cpp  highlighter.h
src/utils/: colors.h  signal_handler.cpp  signal_handler.h  variables.cpp  variables.h
tests/: CMakeLists.txt
tests/integration/: test_jobs.cpp  test_pipeline.cpp  test_redirection.cpp
tests/unit/: test_builtin.cpp  test_parser.cpp  test_variables.cpp
